# gtk-gauges

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: circular_gauge.cpp  circular_gauge.hpp  main.cpp  wind_instrument.cpp  wind_instrument.hpp
